--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
